# Bitcoin-Backed-Loan-Platform

./: Cargo.toml  README.md  dfx.json
.dfx/local/: canister_ids.json
.dfx/network/local/: network-id  replica-effective-config.json
.dfx/network/local/state/replicated_state/17ee969f4d56997f3cb9c0221c0f3f903d631a7c1a552782824808c315d8356a/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/6e655e8caf4623e62de63754a2fd2a8cb2621c5a7899ed82efdcadb73a866cf5/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/a6dfc52868e089ed1e5e5484e117df14d0f76fe21bde22e7555ed6a02f999124/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/afaae1e3a02bd8ec832ab318fa2ef257e7ab791b06d8c4da04488deddef3339c/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/f3e0a9711469429c3d961cd911fea7495e3919476b8d5de66cba203f05d9a734/: states_metadata.pbuf
backend/bbl_backend/: Cargo.toml  bbl_backend.did
backend/bbl_backend/src/: lib.rs
backend/bitcoin_integration/: Cargo.toml  bitcoin_integration.did
backend/bitcoin_integration/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  Header.tsx  LoanDetails.tsx  LoanForm.tsx
src/declarations/bbl_backend/: bbl_backend.did.d.ts  bbl_backend.did.js  index.d.ts  index.js
src/declarations/bitcoin_integration/: bitcoin_integration.did.d.ts  bitcoin_integration.did.js  index.d.ts  index.js
(+12 files in other folders)
