[workspace]
members = [
    "backend/bbl_backend",
    "backend/bitcoin_integration"
]
resolver = "1"

[dependencies]
candid         = "0.10.17"      # latest stable today
ic-cdk         = "0.10.0"
ic-cdk-macros  = "0.10.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = { version = "1.0" }
